[gd_scene load_steps=17 format=2]

[ext_resource path="res://scr/stage/Stage.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://scr/actors/PlayerClass.tscn" type="PackedScene" id=3]
[ext_resource path="res://scr/userinterface/UserInterface.tscn" type="PackedScene" id=4]
[ext_resource path="res://scr/enemy/Mob1.tscn" type="PackedScene" id=5]
[ext_resource path="res://scr/enemy/Mob2.tscn" type="PackedScene" id=6]
[ext_resource path="res://scr/enemy/Mob0.tscn" type="PackedScene" id=7]
[ext_resource path="res://scr/enemy/Mob3.tscn" type="PackedScene" id=8]
[ext_resource path="res://scr/enemy/Boss1.tscn" type="PackedScene" id=9]
[ext_resource path="res://scr/stage/CloudsNoiseBackground.tscn" type="PackedScene" id=10]
[ext_resource path="res://scr/enemy/Mob5.tscn" type="PackedScene" id=11]
[ext_resource path="res://scr/enemy/Mob6.tscn" type="PackedScene" id=12]
[ext_resource path="res://scr/players/Player2.tscn" type="PackedScene" id=13]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=2]
0/name = "icon.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Environment" id=3]
background_mode = 4
fog_color = Color( 0.580392, 0.501961, 0.701961, 1 )
fog_sun_color = Color( 0.956863, 0.533333, 0.192157, 1 )
fog_sun_amount = 1.0
fog_depth_begin = 0.0
fog_transmit_enabled = true
fog_height_enabled = true
fog_height_max = 1024.0
tonemap_mode = 2
auto_exposure_scale = 1.89
auto_exposure_max_luma = 16.0
auto_exposure_speed = 20.36
glow_enabled = true
glow_intensity = 0.6
glow_strength = 0.55
glow_bloom = 0.5
glow_blend_mode = 0
glow_hdr_scale = 1.0
glow_bicubic_upscale = true

[node name="Stage" type="Node2D"]
script = ExtResource( 1 )
ui_ = ExtResource( 4 )
player_ = [ ExtResource( 3 ), ExtResource( 13 ) ]
background_ = ExtResource( 10 )
stage1_enemies = [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 5 ) ]
stage2_enemies = [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ) ]
stage3_enemies = [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ) ]
boss_array = [ ExtResource( 9 ) ]

[node name="UICanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 1024 )

[node name="Tween" type="Tween" parent="ParallaxBackground/ParallaxLayer"]

[node name="Player" type="Node2D" parent="."]

[node name="PlayerBullets" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="EnemyBullets" type="Node2D" parent="."]

[node name="Loot" type="Node2D" parent="."]

[node name="StageLimits" type="Node2D" parent="."]
visible = false

[node name="PlayerLimitMap" type="TileMap" parent="StageLimits"]
modulate = Color( 0, 0, 0, 1 )
tile_set = SubResource( 2 )
cell_quadrant_size = 32
collision_use_kinematic = true
collision_bounce = 1.0
collision_layer = 32
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, 65535, 0, 0, 16, 0, 0, 131071, 0, 0, 65552, 0, 0, 196607, 0, 0, 131088, 0, 0, 262143, 0, 0, 196624, 0, 0, 327679, 0, 0, 262160, 0, 0, 393215, 0, 0, 327696, 0, 0, 458751, 0, 0, 393232, 0, 0, 524287, 0, 0, 458768, 0, 0, 589823, 0, 0, 524304, 0, 0, 655359, 0, 0, 589840, 0, 0, 720895, 0, 0, 655376, 0, 0, 786431, 0, 0, 720912, 0, 0, 851967, 0, 0, 786448, 0, 0, 917503, 0, 0, 851984, 0, 0, 983039, 0, 0, 917520, 0, 0, 1048575, 0, 0, 983056, 0, 0, 1114111, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0 )

[node name="EnemyLimitMap" type="TileMap" parent="StageLimits"]
modulate = Color( 0, 0, 0, 1 )
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
collision_use_kinematic = true
collision_bounce = 1.0
collision_layer = 16
collision_mask = 14
format = 1
tile_data = PoolIntArray( -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -196592, 0, 0, -196591, 0, 0, -196590, 0, 0, -196589, 0, 0, -196588, 0, 0, -196587, 0, 0, -196586, 0, 0, -196585, 0, 0, -196584, 0, 0, -196583, 0, 0, -196582, 0, 0, -196581, 0, 0, -196580, 0, 0, -196579, 0, 0, -196578, 0, 0, -196577, 0, 0, -196576, 0, 0, -196575, 0, 0, -65539, 0, 0, -131039, 0, 0, -3, 0, 0, -65503, 0, 0, 65533, 0, 0, 33, 0, 0, 131069, 0, 0, 65569, 0, 0, 196605, 0, 0, 131105, 0, 0, 262141, 0, 0, 196641, 0, 0, 327677, 0, 0, 262177, 0, 0, 393213, 0, 0, 327713, 0, 0, 458749, 0, 0, 393249, 0, 0, 524285, 0, 0, 458785, 0, 0, 589821, 0, 0, 524321, 0, 0, 655357, 0, 0, 589857, 0, 0, 720893, 0, 0, 655393, 0, 0, 786429, 0, 0, 720929, 0, 0, 851965, 0, 0, 786465, 0, 0, 917501, 0, 0, 852001, 0, 0, 983037, 0, 0, 917537, 0, 0, 1048573, 0, 0, 983073, 0, 0, 1114109, 0, 0, 1048609, 0, 0, 1179645, 0, 0, 1114145, 0, 0, 1245181, 0, 0, 1179681, 0, 0, 1310717, 0, 0, 1245217, 0, 0, 1376253, 0, 0, 1310753, 0, 0, 1441789, 0, 0, 1376289, 0, 0, 1507325, 0, 0, 1441825, 0, 0, 1572861, 0, 0, 1507361, 0, 0, 1638397, 0, 0, 1572897, 0, 0, 1703933, 0, 0, 1638433, 0, 0, 1769469, 0, 0, 1703969, 0, 0, 1835005, 0, 0, 1769505, 0, 0, 1900541, 0, 0, 1835041, 0, 0, 1966077, 0, 0, 1900577, 0, 0, 2031613, 0, 0, 1966113, 0, 0, 2097149, 0, 0, 2031649, 0, 0, 2162685, 0, 0, 2097185, 0, 0, 2228221, 0, 0, 2162721, 0, 0, 2293757, 0, 0, 2359293, 0, 0, 2293793, 0, 0, 2424829, 0, 0, 2359329, 0, 0, 2490365, 0, 0, 2424865, 0, 0, 2555901, 0, 0, 2490401, 0, 0, 2621437, 0, 0, 2555937, 0, 0, 2621473, 0, 0, 2752509, 0, 0, 2687009, 0, 0, 2818045, 0, 0, 2883581, 0, 0, 2818081, 0, 0, 2949117, 0, 0, 2883617, 0, 0, 3014653, 0, 0, 2949153, 0, 0, 3080189, 0, 0, 3014689, 0, 0, 3145725, 0, 0, 3080225, 0, 0, 3211261, 0, 0, 3145761, 0, 0, 3276797, 0, 0, 3211297, 0, 0, 3342333, 0, 0, 3276833, 0, 0, 3407869, 0, 0, 3342369, 0, 0, 3473405, 0, 0, 3407905, 0, 0, 3538941, 0, 0, 3538942, 0, 0, 3538943, 0, 0, 3473408, 0, 0, 3473409, 0, 0, 3473410, 0, 0, 3473411, 0, 0, 3473412, 0, 0, 3473413, 0, 0, 3473414, 0, 0, 3473416, 0, 0, 3473417, 0, 0, 3473418, 0, 0, 3473419, 0, 0, 3473420, 0, 0, 3473421, 0, 0, 3473422, 0, 0, 3473423, 0, 0, 3473424, 0, 0, 3473425, 0, 0, 3473426, 0, 0, 3473427, 0, 0, 3473428, 0, 0, 3473429, 0, 0, 3473430, 0, 0, 3473431, 0, 0, 3473432, 0, 0, 3473433, 0, 0, 3473434, 0, 0, 3473435, 0, 0, 3473436, 0, 0, 3473437, 0, 0, 3473438, 0, 0, 3473439, 0, 0, 3473440, 0, 0, 3473441, 0, 0 )

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="LastWaveTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnRateTimer" type="Timer" parent="."]
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )
[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="LastWaveTimer" to="." method="_on_LastWaveTimer_timeout"]
